--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,9 +1,10 @@
-// body {
-//   background-color: #fff;
-//   color: #333;
-//   margin: 0px;
-//   font-family: verdana, arial, helvetica, sans-serif;
-// }
+body {
+  background-color: #fff;
+  color: #333;
+  margin: 0px;
+  padding: 0px;
+  font-family: verdana, arial, helvetica, sans-serif;
+}
 
 // p, ol, ul, td {
 //   font-family: verdana, arial, helvetica, sans-serif;
