--- a/app/views/auctions/index.html.erb
+++ b/app/views/auctions/index.html.erb
@@ -9,13 +9,23 @@
   <% if auction.user != current_user %>
       <div class="col-sm-6 col-md-4 "style="padding:0rem;">
         <div class="thumbnail home-page-touchup">
-          <%= image_tag(auction.image, style:"height:241px; width:100%") if auction.image.attached? %>
+          
+          <% if auction.image.attached? %>
+              <%= image_tag(auction.image, style:"height:24.1rem; width:100%") if auction.image.attached? %>
+          <% else %>
+              <div class ="col-xs-12 col-md-12 "style= "width:100%; height:24.1rem; background-color:#f4f4f4">
+                  <div class="no-image-massage"> 
+                      No Image Available
+                  </div>
+              </div>
+          <% end %>
+          
           <div class="caption">
             <h4 class="center">
               <small>STARTING BID:</small> <%= auction.starting_bid %> &#x20B9; <br> 
               <small>CURRENT PRICE:</small> <%= auction.current_price %> &#x20B9;<br>
               <% if auction.bidder_id %>
-                <small>CURRENT BIDDER:</small> <%= User.find(auction.bidder_id).full_name %>
+                <small>CURRENT BIDDER:</small> <%= get_user(auction.bidder_id).full_name%>
               <% else %>
                  <small>No bidding found </small>
               <% end %>
@@ -23,13 +33,23 @@
             <h3 class="center"><%= auction.name %></h3>
             <p class="center"><%= truncate(auction.description, :ommision => ".... Read More", :length => 150) %></p>
             
-            <p class="center"><%= link_to 'Bid Now', auction, class: "btn btn-sm btn-primary" %> <%= link_to 'Products Details', auction, class:"btn btn-sm btn-default" %> <%= link_to 'Back', :back, class: "btn btn-sm btn-default"%> </p>
+            <p class="center">
+              <%= link_to 'Bid Now', new_bid_path(:id => auction.id), class: "btn btn-sm btn-primary" %> 
+              <%= link_to 'Products Details', auction, class:"btn btn-sm btn-default" %> 
+              <%= link_to 'All bids', bids_path(:id => auction.id), class: "btn btn-sm btn-default"%> 
+            </p>
     
               <small>    
                   added for auction: <%= time_ago_in_words(auction.created_at)%> ago,
                   last updated: <%= time_ago_in_words(auction.updated_at) %> ago 
               </small>
-              <h4>auction ends in: <strong><%= time_ago_in_words(auction.deadline) %></strong></h4>
+              <h4>
+                <% if in_progress?(auction.id) %> 
+                  auction ends in: <strong><%= time_ago_in_words(auction.deadline) %></strong>
+                <% else %>
+                  <h4>auction is over for this product</h4>
+                <% end %>
+              </h4>
   
           </div>
         </div>
