--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -107,15 +107,17 @@
     transform: translate(-50%, -50%);
 }
 .footer-item {
- 
-    text-align: center;
+    position: absolute;
+    right: 0;
+    transform: translate(-25%, -20%);
     color: #767b85;
     padding: 1rem;
 }
 .footer {
-    background-color:#2a303b;
-    padding: 2.5rem;
-    margin-top: 2rem;
+    position: relative;
+    background-color: #2a303b;
+    padding: 5rem;
+    margin-top: 4rem;
 }
 .footer-icons {
     margin:0rem 2rem;
