--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -26,8 +26,8 @@
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
-        
         <% if user_signed_in? %>
+          <li><%= link_to image_tag(asset_url("/assets/cart1.png")), cart_path, id: "cart-logo" %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user"></i> <%= current_user.full_name.present? ? current_user.full_name : current_user.email %><span class="caret"></span></a>
             <ul class="dropdown-menu center">
@@ -36,7 +36,6 @@
               <li><%= link_to 'Edit User', edit_user_registration_path(current_user), id:"droplist" %></li>
               <li role="separator" class="divider"></li>
               <li><%= link_to "Delete Account", registration_path(current_user), data: { confirm: "Are you sure?" }, method: :delete, id: "droplist" %></li>
-              <li><%= link_to 'Back', :back, id:"droplist" %></li>
             </ul>
           </li>
           <li><%= link_to 'Log out', destroy_user_session_path,method: :delete, class:"btn btn-danger", id:"logout-btn" %></li>
