--- a/app/views/auctions/index.html.erb
+++ b/app/views/auctions/index.html.erb
@@ -6,7 +6,7 @@
 <h1 class="center" style="margin:3rem;">Products for Auction</h1>
 
 <% @auctions.each do |auction| %>
-  <% if auction.user != current_user %> 
+  <% if true %> 
   <!--auction.user != current_user-->
       <div class="col-sm-6 col-md-4 "style="padding:0rem;">
         <div class="thumbnail home-page-touchup">
