--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,10 @@
 <div class="footer">
+    <span class="footer-content">
+        Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, 
+        <br>graphic or web designs. The passage is attributed to an un... 
+        <br>The passage is attributed to an un...
+    </span>
+    <hr style = "border-color:#3f414d">
     <div>
         <a href="https://www.instagram.com/gkc_3/"> 
             <%= image_tag(asset_url("/assets/instagram.png"), class:"footer-icons") %>
