--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -27,10 +27,10 @@
 
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
-          <li><%= link_to image_tag(asset_url("/assets/cart1.png")), cart_path, id: "cart-logo" %></li>
+          <li><%= link_to image_tag(asset_url("/assets/cart2.png")), cart_path, id: "cart-logo" %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user"></i> <%= current_user.full_name.present? ? current_user.full_name : current_user.email %><span class="caret"></span></a>
-            <ul class="dropdown-menu center">
+            <ul class="dropdown-menu">
               <li><%= link_to 'Add Products', new_auction_path, id:"droplist" %></li>
               <li><%= link_to 'User Dashboard', user_path(current_user), id:"droplist" %></li>
               <li><%= link_to 'Edit User', edit_user_registration_path(current_user), id:"droplist" %></li>
