--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,7 +4,7 @@
 <% @users.each do |user|%>
     
     <div class="row thumbnail user-index-page">
-        <div class ="col-xs-12 col-md-4"style= "width:200px; height:180px; background-color:#f4f4f4">
+        <div class ="col-xs-12 col-md-4"style= "width:200px; height:180px; background-color:#f4f4f4;">
             <div class="no-image-massage"> 
                 No Image
             </div>
