--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,9 +1,9 @@
 <div class="footer">
-    <span class="footer-content">
+    <div class="footer-content">
         Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, 
         <br>graphic or web designs. The passage is attributed to an un... 
         <br>The passage is attributed to an un...
-    </span>
+    </div>
     <hr style = "border-color:#3f414d">
     <div>
         <a href="https://www.instagram.com/gkc_3/"> 
