--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -15,7 +15,7 @@
         <li><%= link_to 'Auction Dashboard',auctions_path %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Categories<span class="caret"></span></a>
-            <ul class="dropdown-menu center">
+            <ul class="dropdown-menu">
               <li><%= link_to 'Book', "#", id:"droplist" %></a></li>
               <li><%= link_to 'Electronics', "#", id:"droplist" %></li>
               <li><%= link_to 'Cycles', "#", id:"droplist" %></li>
